# BrewStock

./: .gitignore  BrewStock PRD fix.md  PRD.md  README.md  render.yaml
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/docs/: api.md
backend/sql/: initSchema.sql
backend/src/app/: main.py
backend/src/app/controllers/: aiController.py  authController.py  forecastController.py  inventoryController.py  menuController.py  scannerController.py
backend/src/app/core/: cacheClient.py  database.py  dependencies.py  rateLimit.py  sanitizer.py  security.py  settings.py
backend/src/app/factories/: aiServiceFactory.py
backend/src/app/models/: forecastDataModel.py  refreshTokenModel.py  scannerResultModel.py  stockAlertModel.py  stockItemModel.py  transactionModel.py  userModel.py
backend/src/app/observers/: aiStockObserver.py  logStockObserver.py  stockAlertObserver.py  stockAlertPublisher.py
backend/src/app/repositories/: refreshTokenRepository.py  stockRepository.py  transactionRepository.py  userRepository.py
backend/src/app/routes/: aiRoutes.py  authRoutes.py  forecastRoutes.py  inventoryRoutes.py  menuRoutes.py  scannerRoutes.py
backend/src/app/schemas/: aiSchema.py  authSchema.py  baseSchema.py  (+4 more)
backend/src/brewStockBackend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/unit/: testAiInsightService.py  testAiServiceFactory.py  testAuthService.py  testForecastService.py  testInventoryService.py  testMenuService.py  testRateLimit.py  testScannerDependency.py  testScannerRateLimit.py  testScannerService.py
(+45 files in other folders)
