[project]
name = "brewStockBackend"
version = "0.1.0"
description = "BrewStock demand forecast backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "redis>=5.0.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "prophet>=1.1.5",
  "xgboost>=2.0.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "anyio>=4.4.0",
  "ruff>=0.4.8"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
python_files = ["test*.py"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
